Added Builds Guide Page

--- a/PartBench/PartBench.csproj
+++ b/PartBench/PartBench.csproj
@@ -119,6 +119,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BuildGuidePage.xaml.cs">
+      <DependentUpon>BuildGuidePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="BuildsPage.xaml.cs">
       <DependentUpon>BuildsPage.xaml</DependentUpon>
     </Compile>
@@ -140,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\logo.mp4" />
+    <Content Include="Assets\sample.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\PartBenchLogoV1.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
@@ -157,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BuildGuidePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="BuildsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
