--- a/PartBench/PartBench.csproj
+++ b/PartBench/PartBench.csproj
@@ -119,8 +119,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BuildGuidePage.xaml.cs">
-      <DependentUpon>BuildGuidePage.xaml</DependentUpon>
+    <Compile Include="BuildEditorPage.xaml.cs">
+      <DependentUpon>BuildEditorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="BuildsPage.xaml.cs">
       <DependentUpon>BuildsPage.xaml</DependentUpon>
@@ -143,7 +143,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\logo.mp4" />
-    <Content Include="Assets\sample.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\PartBenchLogoV1.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
@@ -161,7 +160,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="BuildGuidePage.xaml">
+    <Page Include="BuildEditorPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
