--- a/PartBench/PartBench.csproj
+++ b/PartBench/PartBench.csproj
@@ -122,6 +122,9 @@
     <Compile Include="BuildEditorPage.xaml.cs">
       <DependentUpon>BuildEditorPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BuildGuidePage.xaml.cs">
+      <DependentUpon>BuildGuidePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="BuildsPage.xaml.cs">
       <DependentUpon>BuildsPage.xaml</DependentUpon>
     </Compile>
@@ -164,6 +167,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="BuildGuidePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="BuildsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -182,6 +189,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Marduk.Controls">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
