--- a/PartBench/PartBench.csproj
+++ b/PartBench/PartBench.csproj
@@ -137,6 +137,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PricePerformancePage.xaml.cs">
+      <DependentUpon>PricePerformancePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondBuild.xaml.cs">
       <DependentUpon>SecondBuild.xaml</DependentUpon>
@@ -203,6 +206,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="PricePerformancePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SecondBuild.xaml">
       <SubType>Designer</SubType>
